deploy/kubernetes/cockroach/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  namespace: payments
  labels:
    app.kubernetes.io/name: cockroachdb
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: cockroachdb
  ports:
    - {name: sql, port: 26257, targetPort: sql}
    - {name: rpc, port: 26357, targetPort: rpc}
---
apiVersion: v1
kind: Service
metadata:
  name: cockroach-public
  namespace: payments
  labels:
    app.kubernetes.io/name: cockroachdb
spec:
  selector:
    app.kubernetes.io/name: cockroachdb
  ports:
    - {name: sql, port: 26257, targetPort: sql}
